# med-spravocnik

./: .env.example  .gitignore  README.md  compose.yaml  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
apps/frontend-flutter/: README.md  pubspec.yaml  start_project.bat  start_project.ps1  start_project.sh
archive/local-notes/: BUILD_PROMPT.md
archive/node-postgres-mvp/: .env.example  ARCHIVE.md  package.json  pnpm-lock.yaml  tsconfig.json
config/: .env.example
database/: README.md
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CODEPLACE_PREVIEW.md  DEVELOPMENT.md  PROJECT_STRUCTURE.md  RAG.md  SETUP.md
flutter_app/: pubspec.yaml
flutter_app/test/: widget_test.dart
flutter_app/web/: index.html
preview-codeplace/: Dockerfile  README.md  app.py  compose.yaml  index.html  requirements-dev.txt  requirements.txt  test_preview.py
prisma/: schema.prisma  seed.ts
public/: app.js  index.html  styles.css
scripts/: setup.ps1  start-full.ps1  start-preview.ps1  start-preview.sh  test.ps1
scripts/ingestion/: README.md  med_pipeline.py  pipeline_config.json  requirements.txt
services/calculator-api/: CONTRIBUTING.md  Dockerfile  README.md  UPSTREAM.md  (+3 more)
services/knowledge-api/: .gitignore  README.md  pyproject.toml
services/knowledge-api/docs/: AUDIT_2026-06-14.md
services/knowledge-api/src/medical_kb/: __init__.py  api.py  config.py  models.py  presentation.py  repository.py
services/knowledge-api/tests/: test_api.py  test_repository.py
src/: app.ts  server.ts
локальный проект/: README.md
(+100 files in other folders)
