[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medical-knowledge-base"
version = "0.1.0"
description = "Read-only search and RAG evidence API for local medical protocols"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0,<1.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "scikit-learn>=1.7.0,<2.0.0",
    "uvicorn>=0.40.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=9.0.0,<10.0.0",
]

[project.scripts]
medical-kb-api = "medical_kb.api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/medical_kb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
